[gd_scene load_steps=27 format=2]

[ext_resource path="res://art/play_character/Char.png" type="Texture" id=1]
[ext_resource path="res://objects/characters/playable/MainCharacter.gd" type="Script" id=2]
[ext_resource path="res://objects/characters/playable/MainCharFSM.gd" type="Script" id=3]
[ext_resource path="res://art/play_character/Char Move Forward.png" type="Texture" id=4]
[ext_resource path="res://art/play_character/Char Move Down.png" type="Texture" id=5]
[ext_resource path="res://art/play_character/Char Move Up.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 80, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 16, 20 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "fall",
"speed": 8.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "jump",
"speed": 8.0
}, {
"frames": [  ],
"loop": true,
"name": "killed",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "moving",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 19 )

[node name="MainCharacter" type="KinematicBody2D"]
position = Vector2( 360, 264 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 2
script = ExtResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Body" type="Node2D" parent="."]

[node name="AnimatedPlayer" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "fall"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="DashLine" type="Line2D" parent="."]
position = Vector2( 1, 0 )
points = PoolVector2Array( -1, 0, -1, 0, -1, 0 )
default_color = Color( 0.0117647, 0.133333, 0.737255, 1 )

[node name="ShootLine" type="Line2D" parent="."]
visible = false
position = Vector2( 1.52588e-05, 0 )
scale = Vector2( 1.30769, 1 )
points = PoolVector2Array( 0, 0, 15.2941, 0 )
width = 3.0
default_color = Color( 0.729412, 0.0627451, 0.172549, 1 )

[node name="Position2D" type="Position2D" parent="ShootLine"]
position = Vector2( 15.2941, 0 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="DashCDTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="DashCDTimer" to="." method="_on_DashCDTimer_timeout"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
